--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension Cache::Redis
+0.03  Wed Oct 17 2012 16:38:00 +0900
+		remove method correct
 0.02  Wed Oct 17 22:19:00 +0900
 		test script correct
 0.01  Fri Oct  5 10:37:39 2012
