--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension Cache::Redis
+0.04  Wed Oct 17 2012 19:32:00 +0900
+		redis reconnect attribute add
 0.03  Wed Oct 17 2012 16:38:00 +0900
 		remove method correct
 0.02  Wed Oct 17 22:19:00 +0900
